# tabler-ves

./: .gitignore  file.html  remove_comments.js
.claude/: settings.local.json
api-server/: .dockerignore  .gitignore  .http  API.md  CLAUDE.md  Cargo.toml  Dockerfile  test_actix.rs
api-server/.agent/workflows/: new-route.md
api-server/.claude/: settings.local.json
api-server/docs/superpowers/plans/: 2026-05-31-avatar-upload.md  2026-05-31-grado-academico-clean-arch.md
api-server/docs/superpowers/specs/: 2026-05-31-avatar-upload-design.md  2026-05-31-grado-academico-clean-arch-design.md
api-server/graphify-out/: api-server-callflow.html  graph.html
api-server/src/: main.rs
api-server/src/handlers/: avatar.rs  dash.rs  fileserver.rs  grado.rs  login.rs  mod.rs  personal.rs  usuarios.rs
api-server/src/key/: key.rs
api-server/src/middleware/: check.rs  error.rs  jwt.rs  mod.rs
api-server/src/models/: audit.rs  dash.rs  fileserver.rs  login.rs  mod.rs  personal.rs
api-server/src/repositories/: banco_repo.rs  contacto_repo.rs  documento_repo.rs  gradoaca_repo.rs  mod.rs  personal_repo.rs  sindicato_repo.rs  usuario_repo.rs
api-server/src/routes/: avatar.rs  dash.rs  fileserver.rs  login.rs  mod.rs  personal.rs  usuarios.rs
api-server/src/services/: audit_service.rs  banco_service.rs  contacto_service.rs  documento_service.rs  gradoaca_service.rs  login.rs  mod.rs  personal_service.rs  sindicato_service.rs
dashboard/: .dockerignore  .gitignore  .prettierrc  API.md  Dockerfile  bun.lockb  index.html  nginx.conf  package-lock.json  package.json  skills-lock.json  tsconfig.app.json  (+1 more)
(+244 files in other folders)
