[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[package.metadata.scripts]
dev = "cargo watch -i '*.http' -x run"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
mime_guess = "2.0"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
    "uuid",
    "macros"
] }
validator = { version = "0.20.0", features = ["derive"] }
